fix visibility-1 buttons under style bar

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -59,7 +59,7 @@ button {
     top: 0;
   }
 
-  &.button-row-vertical .button-row-inner {
+  &.vertical .button-row-inner {
     flex-direction: column;
     padding: 0;
   }
